--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,5 +1,5 @@
 name: Python-Test
-on: [push, workflow_dispatch]
+on: [push, workflow_dispatch] #여러가지 방식의 실행을 할수가있음 현재 push와 손실행 방식으로 실행가능
 jobs:
   test:
     runs-on: ubuntu-latest
